# azfunc-pywsgi-demo

./: Readme.md  local.settings.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile
BottleTrigger/: __init__.py  function.json
FlaskTrigger/: __init__.py  function.json
WsgiApi/: __init__.py  function.json
